--- a/charts/miggo/values.yaml
+++ b/charts/miggo/values.yaml
@@ -365,8 +365,8 @@ miggoRuntime:
     probabilisticThreshold: 100
     # -- Time interval for which probabilistic profiling will be enabled or disabled.
     probabilisticInterval: 1m0s
-    # -- Disable cgroup-based filtering
-    disableCgroupFilter: false
+    # -- Enable cgroup-based filtering
+    enableCgroupFilter: true
 
   fluentbit:
     # -- Install fluent-bit on each cluster node to forward the profiler logs to the Collector
