disable cgroup filtering by default

--- a/charts/miggo/values.yaml
+++ b/charts/miggo/values.yaml
@@ -366,7 +366,7 @@ miggoRuntime:
     # -- Time interval for which probabilistic profiling will be enabled or disabled.
     probabilisticInterval: 1m0s
     # -- Enable cgroup-based filtering
-    enableCgroupFilter: true
+    enableCgroupFilter: false
 
   fluentbit:
     # -- Install fluent-bit on each cluster node to forward the profiler logs to the Collector
